<resources>
    <string name="app_name">Shopping List</string>

    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="create_list">Create list</string>
    <string name="list_name">List name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="rename">Rename</string>
    <string name="delete_list_confirmation">Delete list?</string>
    <string name="delete">Delete</string>
    <string name="add_items">Add items</string>
    <string name="menu_add_items_from_history">Add</string>
    <string name="history_activity_title">Add items</string>
    <string name="new_item_hint">New item</string>
    <string name="loading">Loading…</string>
    <string name="no_items">No items</string>
    <string name="item_is_in_list_already"><![CDATA[<b>%s</b> already exists]]></string>
    <string name="add_item_to_list"><![CDATA[Add <b>%s</b> to the list]]></string>
    <string name="add">Add</string>
    <string name="default_list_name">Shopping List</string>
    <string name="item_was_deleted">Item was deleted</string>
    <string name="undo">Undo</string>
    <string name="list_is_empty">List is empty</string>
    <string name="quantity_units">Quantity units</string>
    <string name="categories">Categories</string>
    <string name="dictionary_create_dialog_title">Create</string>
    <string name="dictionary_rename_dialog_title">Rename</string>
    <string name="item_name">Item name</string>
    <string name="quantity">Quantity</string>
    <string name="edit_item">Edit item</string>
    <string name="price">Price</string>
    <string name="total_cost">Total: %s</string>
    <string name="category">Category</string>
    <string name="default_category">Uncategorized</string>
    <string name="default_quantity_unit">Units</string>
    <string name="note">Note</string>

    <string name="display_preferences">Look and feel</string>
    <string name="striked_out_items_in_bottom">Crossed off items at the bottom</string>
    <string name="summary_striked_out_items_in_bottom">After crossing out an item, move it to the bottom of the list</string>
    <string name="display_total_cost_summary">Display total cost of a list if it\'s not zero</string>
    <string name="display_total_cost_title">Display total cost</string>
    <string name="other">Other</string>
    <string name="tax_in_percent">Tax in percent</string>
    <string name="price_with_tax">%1$s (%2$s with tax)</string>
    <string name="currency_summary">Currency preview: %s</string>
    <string name="currency">Currency</string>
    <string name="currency_position">Position</string>
    <string name="currency_preview">Preview</string>
    <string-array name="currency_position">
        <item>Left</item>
        <item>Right</item>
    </string-array>
    <string name="crossed_off">Crossed off</string>
    <string name="qty">Qty</string>
    <string-array name="list_row_size_entries">
        <item>Default (variable)</item>
        <item>Always large</item>
    </string-array>
    <string name="list_row_size">List row size</string>
    <string name="in_cart_cost">In cart: %s</string>
    <string name="remaining_cost">Remaining: %s</string>
    <string name="speech_input_prompt">Say item name</string>
    <string name="delete_crossed_off_items">Delete crossed off items</string>


    <string-array name="list_row_size_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
