<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_delete_crossed_items"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_crossed_off_items"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_items"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add_items"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_rename_list"
        android:title="@string/rename_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_list"
        android:title="@string/delete_list"
        app:showAsAction="never" />

</menu>
