<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group
        android:id="@+id/lists_group"
        android:checkableBehavior="single">
    </group>

    <group
        android:id="@+id/add_list_group"
        android:orderInCategory="100">
        <item
            android:id="@+id/add_list"
            android:icon="@drawable/ic_add_white_24dp"
            android:title="@string/create_list" />
    </group>

    <group android:orderInCategory="101">
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>
